Attempted to complete Game cycle, needs further improvement

--- a/TicTacThirdTry/Base.lproj/Main.storyboard
+++ b/TicTacThirdTry/Base.lproj/Main.storyboard
@@ -279,14 +279,26 @@
                     <view key="view" contentMode="scaleToFill" id="UVh-6J-YLk">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lDr-0Y-BIK">
+                                <rect key="frame" x="175" y="198" width="42" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="euu-yS-1Fu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="Ywr-2k-691"/>
+                    <connections>
+                        <outlet property="endingLbl" destination="lDr-0Y-BIK" id="cS1-4E-xZ1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mW5-g5-cdJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2500" y="667"/>
+            <point key="canvasLocation" x="2500" y="666.90140845070425"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="I75-2m-sMY">
